# RPG1test

./: API_ENDPOINTS.md  API_USAGE_GUIDE.md  BUILD_COMPLETE.md  BUILD_COMPLETE_API.md  BUILD_STATUS.md  BUILD_SUCCESS.txt  CHANGELOG.md  CLIENT_BUILD_SUCCESS.txt  COMPLETE_BUILD_SUMMARY.md  COMPLETE_EDITOR_SYSTEM.md  EDITOR_ARCHITECTURE.md  EDITOR_FEATURES.md  ENCHANTMENT_ENGINE_README.txt  FEATURES_UPDATE.md  FINAL_SUCCESS.txt  GAME_ENGINE_DESIGN.md  PROJECT_MANAGER.md  PROJECT_MANAGER_FEATURES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REORGANIZATION_COMPLETE.md  SERVER_QUICKSTART.md  TESTING.md  TROUBLESHOOTING.md  UI_FIX_SUMMARY.md  UML_DIAGRAMS.md  UNIFIED_BUILD.md  UPDATE_SUMMARY.md  WEB_CLIENT_API.md  WEB_CLIENT_QUICKSTART.md  WHATS_NEW.md  build_all.bat  build_client.bat  build_editor.bat  build_server.bat  build_server.sh  build_unified.bat  build_unified.sh  (+8 more)
.github/: FUNDING.yml
examples/: README.md
examples/LabyrinthOfTheDragon/src/: strings.h  tables.c
src/client/: api-demo.html  index.html  test-api.html
src/client-app/: CMakeLists.txt  README.md  api_client.cpp  api_client.hpp  app_icon.rc  app_manifest.xml  application.cpp  application.hpp  browser_window.cpp  browser_window.hpp  main.cpp
src/client/js/: api-client.js  api-menus.js
src/editor/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp  build_system.cpp  build_system.hpp  code_editor.cpp  code_editor.hpp  editor_window.cpp  editor_window.hpp  main.cpp
src/server/: CMakeLists.txt  README.md  asset_processor.cpp  asset_processor.hpp  build_system.cpp  build_system.hpp  file_manager.cpp  file_manager.hpp  json_utils.hpp  main.cpp  server.cpp  server.hpp
src/unified/: CMakeLists.txt  main.cpp  project_manager.cpp  project_manager.hpp  splash_screen.cpp  splash_screen.hpp  unified_application.cpp  unified_application.hpp
